--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "firebase": "^8.2.1",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-sharp": "^2.13.1",
+    "gatsby-remark-images": "^3.10.0",
     "gatsby-source-filesystem": "^2.8.1",
     "gatsby-transformer-remark": "^2.13.1",
     "react": "^16.12.0",
